--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
+    "cheerio": "^1.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "postcss": "^8.5.6",
